# pykelihood

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.rst  environment.yml  notes.md  pyproject.toml  requirements-docs.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  test.yml
docs/source/: conf.py  custom_dist.rst  index.rst  modules.rst  scipy_dist.rst  user_guide.rst
docs/source/_static/: custom.css
docs/source/modules/: distributions.rst  kernels.rst  metrics.rst  parameters.rst  profiler.rst
docs/source/user_guide/: basics.rst  fitting.rst  penalty_fitting.rst  profiler.rst  trend_fitting.rst
pykelihood/: cached_property.py  custom_distributions.py  distributions.py  expr.py  extreme_visualization_utils.py  generic_types.py  kernels.py  metrics.py  multivariate.py  notes.md  parameters.py  profiler.py  samplers.py  scipy_distributions.py  simulations.py  state.py  stats_utils.py  stopping_times.py  utils.py
pykelihood/distributions/: __init__.py  base.py  custom.py  multivariate.py  scipy.py  univariate.py
pykelihood/visualisation/: extreme_values.py  utils.py
tests/: conftest.py  test_distributions.py  test_foundations.py  test_inference.py  test_kernels.py  test_metrics.py  test_multivariate.py  test_parameters.py  test_parametrization.py  test_profiler.py  test_stats_utils.py
