[tool.poetry]
name = "pykelihood"
version = "0.4.1"
description = "Intuitive syntax for complex statistical model fitting and parameter sensitivity analysis."
authors = ["Ophélia Miralles <ophelia.miralles@epfl.ch>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/OpheliaMiralles/pykelihood"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "<2"
scipy = "1.12"
pandas = "2.2"
cached-property = {version = ">=1.5.2", python = "<3.8"}
pyyaml = "6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = "^2.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = "4.2.0"
pydata-sphinx-theme = "0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
