[project]
name = "pykelihood"
version = "0.4.1"
description = "Intuitive syntax for complex statistical model fitting and parameter sensitivity analysis."
authors = [{ name = "Ophélia Miralles", email = "ophelia.miralles@epfl.ch" }]
requires-python = ">=3.9"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.12",
    "pandas>=2.2"
]

[project.optional-dependencies]
plots = [
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/OpheliaMiralles/pykelihood"

[dependency-groups]
test = [
    "pytest",
    "pytest-xdist"
]
tools = [
    "pre-commit",
    "ruff",
]
docs = [
    "sphinx==5.0",
    "pydata-sphinx-theme==0.13.3"
]
dev = [
    "pykelihood[plots]",
    { include-group = "test" },
    { include-group = "docs" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
