[project]
name = "pykelihood"
version = "0.4.1"
description = "Intuitive syntax for complex statistical model fitting and parameter sensitivity analysis."
authors = [{ name = "Ophélia Miralles", email = "ophelia.miralles@epfl.ch" }]
requires-python = ">=3.9"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.5.4",
    "pandas>=1.1.3",
    "packaging>=22.0",
]

[project.optional-dependencies]
plots = [
    "matplotlib>=3.4.0",
]

[project.urls]
Repository = "https://github.com/OpheliaMiralles/pykelihood"

[dependency-groups]
test = [
    "pytest>=7",
    "pytest-xdist>=3"
]
types = ["scipy-stubs>=1.14; python_version >= '3.10'"]
tools = [
    "pre-commit>=4",
    "ruff>=0.9",
]
docs = [
    "sphinx>=6.0",
    "pydata-sphinx-theme==0.13.3"
]
dev = [
    "pykelihood[plots]",
    { include-group = "test" },
    { include-group = "types" },
    { include-group = "tools" },
    { include-group = "docs" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
    "I", # Import sorting
    "UP",  # PyUpgrade
]

[tool.pytest.ini_options]
durations = 10
verbose = true
